Change title and add back link in HTML
Updated the title and added a back link for navigation.

--- a/days/day-002-data-types.html
+++ b/days/day-002-data-types.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Day 2 Instructional Page</title>
+    <title>Day 2 — Input & Variables</title>
   </head>
   <body>
     <!-- MAIN CONTAINER: Centered, max-width for readability -->
@@ -16,6 +16,15 @@
         line-height: 1.6;
       "
     >
+      <!-- BACK LINK -->
+      <div style="padding: 10px 0">
+        <a
+          href="../index.html"
+          style="text-decoration: none; color: #0056b3; font-weight: 500"
+          >&larr; Back to Home</a
+        >
+      </div>
+
       <!-- HEADER BANNER -->
       <div
         style="
@@ -274,8 +283,7 @@ print("You are")
 print(YourName)
 print("You're probably hungry for")
 print(Hungry)
-</pre
-            >
+</pre>
           </div>
         </div>
 
