Refactor day items to use anchor tags

--- a/index.html
+++ b/index.html
@@ -131,39 +131,54 @@
               style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px"
             >
               <!-- Day Items -->
-              <div
+              <a
+                href="https://github.com/jiansuphd/100-days-of-python/blob/a13f62337c9418e03c4c606860bd944c4638a03a/days/day-001-printing.html"
+                target="_blank"
                 style="
+                  text-decoration: none;
+                  color: inherit;
                   background: white;
                   padding: 8px;
                   border: 1px solid #ddd;
                   border-radius: 4px;
                   font-size: 0.9rem;
+                  display: block;
                 "
               >
                 <strong>Day 1:</strong> Hello World
-              </div>
-              <div
+              </a>
+              <a
+                href="https://github.com/jiansuphd/100-days-of-python/blob/a13f62337c9418e03c4c606860bd944c4638a03a/days/day-002-data-types.html"
+                target="_blank"
                 style="
+                  text-decoration: none;
+                  color: inherit;
                   background: white;
                   padding: 8px;
                   border: 1px solid #ddd;
                   border-radius: 4px;
                   font-size: 0.9rem;
+                  display: block;
                 "
               >
                 <strong>Day 2:</strong> Input & Var
-              </div>
-              <div
+              </a>
+              <a
+                href="https://github.com/jiansuphd/100-days-of-python/blob/a13f62337c9418e03c4c606860bd944c4638a03a/days/day-003-control-flow.html"
+                target="_blank"
                 style="
+                  text-decoration: none;
+                  color: inherit;
                   background: white;
                   padding: 8px;
                   border: 1px solid #ddd;
                   border-radius: 4px;
                   font-size: 0.9rem;
+                  display: block;
                 "
               >
-                <strong>Day 3:</strong> Concatenation
-              </div>
+                <strong>Day 3:</strong> Concatenate
+              </a>
               <div
                 style="
                   background: white;
@@ -171,6 +186,7 @@
                   border: 1px solid #ddd;
                   border-radius: 4px;
                   font-size: 0.9rem;
+                  opacity: 0.6;
                 "
               >
                 <strong>Day 4:</strong> Adventure Game
@@ -182,6 +198,8 @@
                   border: 1px solid #ddd;
                   border-radius: 4px;
                   font-size: 0.9rem;
+                  opacity: 0.6;
+                  cursor: not-allowed;
                 "
               >
                 <strong>Day 5:</strong> If/Else
@@ -193,6 +211,8 @@
                   border: 1px solid #ddd;
                   border-radius: 4px;
                   font-size: 0.9rem;
+                  opacity: 0.6;
+                  cursor: not-allowed;
                 "
               >
                 <strong>Day 6:</strong> Elif
