Update links to point to GitHub Pages

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             >
               <!-- Day Items -->
               <a
-                href="https://github.com/jiansuphd/100-days-of-python/blob/a13f62337c9418e03c4c606860bd944c4638a03a/days/day-001-printing.html"
+                href="https://jiansuphd.github.io/100-days-of-python/days/day-001-printing.html"
                 target="_blank"
                 style="
                   text-decoration: none;
@@ -148,7 +148,7 @@
                 <strong>Day 1:</strong> Hello World
               </a>
               <a
-                href="https://github.com/jiansuphd/100-days-of-python/blob/a13f62337c9418e03c4c606860bd944c4638a03a/days/day-002-data-types.html"
+                href="https://jiansuphd.github.io/100-days-of-python/days/day-002-data-types.html"
                 target="_blank"
                 style="
                   text-decoration: none;
@@ -164,7 +164,7 @@
                 <strong>Day 2:</strong> Input & Var
               </a>
               <a
-                href="https://github.com/jiansuphd/100-days-of-python/blob/a13f62337c9418e03c4c606860bd944c4638a03a/days/day-003-control-flow.html"
+                href="https://jiansuphd.github.io/100-days-of-python/days/day-003-control-flow.html"
                 target="_blank"
                 style="
                   text-decoration: none;
