Update Day 4 link and styling in index.html

--- a/index.html
+++ b/index.html
@@ -179,18 +179,22 @@
               >
                 <strong>Day 3:</strong> Concatenate
               </a>
-              <div
+              <a
+                href="https://jiansuphd.github.io/100-days-of-python/days/day-004-story-simulator.html"
+                target="_blank"
                 style="
+                  text-decoration: none;
+                  color: inherit;
                   background: white;
                   padding: 8px;
                   border: 1px solid #ddd;
                   border-radius: 4px;
                   font-size: 0.9rem;
-                  opacity: 0.6;
+                  display: block;
                 "
               >
                 <strong>Day 4:</strong> Adventure Game
-              </div>
+              </a>
               <div
                 style="
                   background: white;
