--- a/days/day-004-story-simulator.html
+++ b/days/day-004-story-simulator.html
@@ -101,6 +101,7 @@
           <a
             href="https://www.youtube.com/watch?v=oakgvGNYQoQ"
             target="_blank"
+            rel="noopener noreferrer"
             style="
               flex: 1;
               min-width: 250px;
@@ -121,6 +122,7 @@
           <a
             href="https://replit.com/@jiansuphd/day4100-days"
             target="_blank"
+            rel="noopener noreferrer"
             style="
               flex: 1;
               min-width: 250px;
@@ -252,7 +254,9 @@
                 style="color: #ce9178"
                 >"Hello"</span
               >, <span style="color: #9cdcfe">name</span>,
-              <span style="color: #ce9178">"Your ability to"</span>,
+              <span style="color: #ce9178"
+                >"Your ability to"</span
+              >,
               <span style="color: #9cdcfe">superPower</span>,
               <span style="color: #ce9178"
                 >"will make sure you never have to look at"</span
@@ -335,6 +339,8 @@ Hello David! Your ability to Invisibility will make sure you never have to look 
           </p>
           <a
             href="#"
+            target="_blank"
+            rel="noopener noreferrer"
             style="
               display: inline-block;
               background-color: #e74c3c;
