Add target='_blank' to links in control flow page

--- a/days/day-003-control-flow.html
+++ b/days/day-003-control-flow.html
@@ -12,7 +12,8 @@
 
         <!-- BACK LINK -->
         <div style="padding: 10px 0;">
-            <a href="../index.html" style="text-decoration: none; color: #0056b3; font-weight: 500;">&larr; Back to Home</a>
+            <!-- Updated: added target="_blank" -->
+            <a href="../index.html" target="_blank" style="text-decoration: none; color: #0056b3; font-weight: 500;">&larr; Back to Home</a>
         </div>
 
         <!-- HEADER BANNER -->
@@ -133,7 +134,8 @@ print("Tonight's dinner:")
             <div style="margin-top: 40px; text-align: center;">
                 <h3 style="color: #2D3B45;">Done?</h3>
                 <p>Share your crazy dinner sentences with the community!</p>
-                <a href="#" style="display: inline-block; background-color: #9b59b6; color: white; padding: 10px 25px; text-decoration: none; border-radius: 5px; font-weight: bold; margin-top: 10px;">Mark Day 3 Complete &rarr;</a>
+                <!-- Updated: added target="_blank" -->
+                <a href="#" target="_blank" style="display: inline-block; background-color: #9b59b6; color: white; padding: 10px 25px; text-decoration: none; border-radius: 5px; font-weight: bold; margin-top: 10px;">Mark Day 3 Complete &rarr;</a>
             </div>
 
         </div>
