Update links to open in new tab

--- a/index.html
+++ b/index.html
@@ -195,19 +195,22 @@
               >
                 <strong>Day 4:</strong> Adventure Game
               </a>
-              <div
+              <a
+                href="https://jiansuphd.github.io/100-days-of-python/days/day-005-if-statements.html"
+                target="_blank"
                 style="
+                  text-decoration: none;
+                  color: inherit;
                   background: white;
                   padding: 8px;
                   border: 1px solid #ddd;
                   border-radius: 4px;
                   font-size: 0.9rem;
-                  opacity: 0.6;
-                  cursor: not-allowed;
+                  display: block;
                 "
               >
                 <strong>Day 5:</strong> If/Else
-              </div>
+              </a>
               <div
                 style="
                   background: white;
@@ -345,13 +348,14 @@
             <li style="margin-bottom: 10px">
               <a
                 href="https://replit.com/learn/100-days-of-python/hub"
+                target="_blank"
                 style="color: #0056b3; text-decoration: underline"
                 >Replit 100 Days Course Link</a
               >
               (Join the Team)
             </li>
             <li style="margin-bottom: 10px">
-              <a href="#" style="color: #0056b3; text-decoration: underline"
+              <a href="#" target="_blank" style="color: #0056b3; text-decoration: underline"
                 >Python Documentation: Control Flow</a
               >
             </li>
@@ -376,6 +380,7 @@
           </p>
           <a
             href="#"
+            target="_blank"
             style="
               display: inline-block;
               background-color: #d35400;
