Fix HTML formatting and add missing elements

--- a/days/day-002-data-types.html
+++ b/days/day-002-data-types.html
@@ -20,6 +20,8 @@
       <div style="padding: 10px 0">
         <a
           href="../index.html"
+          target="_blank"
+          rel="noopener noreferrer"
           style="text-decoration: none; color: #0056b3; font-weight: 500"
           >&larr; Back to Home</a
         >
@@ -89,6 +91,7 @@
           <a
             href="https://www.youtube.com/watch?v=b5tFeJ0Ol2Y"
             target="_blank"
+            rel="noopener noreferrer"
             style="
               flex: 1;
               min-width: 250px;
@@ -109,6 +112,7 @@
           <a
             href="https://replit.com/@jiansuphd/day2100-days"
             target="_blank"
+            rel="noopener noreferrer"
             style="
               flex: 1;
               min-width: 250px;
@@ -283,7 +287,8 @@ print("You are")
 print(YourName)
 print("You're probably hungry for")
 print(Hungry)
-</pre>
+</pre
+            >
           </div>
         </div>
 
@@ -293,6 +298,8 @@ print(Hungry)
           <p>Now, what do we do with this?</p>
           <a
             href="#"
+            target="_blank"
+            rel="noopener noreferrer"
             style="
               display: inline-block;
               background-color: #27ae60;
