Fix HTML formatting and update text content

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               ⚡ This Week's Streak
             </h2>
             <p style="font-size: 0.9rem; margin-bottom: 15px">
-              Complete these Replit exercises to unlock the Module Assessment.
+              Complete these exercises to unlock the Module Assessment.
             </p>
 
             <div
@@ -211,19 +211,38 @@
               >
                 <strong>Day 5:</strong> If/Else
               </a>
-              <div
+              <a
+                href="https://jiansuphd.github.io/100-days-of-python/days/day-006-elif.html"
+                target="_blank"
                 style="
+                  text-decoration: none;
+                  color: inherit;
                   background: white;
                   padding: 8px;
                   border: 1px solid #ddd;
                   border-radius: 4px;
                   font-size: 0.9rem;
-                  opacity: 0.6;
-                  cursor: not-allowed;
+                  display: block;
                 "
               >
                 <strong>Day 6:</strong> Elif
-              </div>
+              </a>
+              <a
+                href="https://jiansuphd.github.io/100-days-of-python/days/day-007-nesting.html"
+                target="_blank"
+                style="
+                  text-decoration: none;
+                  color: inherit;
+                  background: white;
+                  padding: 8px;
+                  border: 1px solid #ddd;
+                  border-radius: 4px;
+                  font-size: 0.9rem;
+                  display: block;
+                "
+              >
+                <strong>Day 7:</strong> Nesting
+              </a>
             </div>
           </div>
         </div>
@@ -355,7 +374,10 @@
               (Join the Team)
             </li>
             <li style="margin-bottom: 10px">
-              <a href="#" target="_blank" style="color: #0056b3; text-decoration: underline"
+              <a
+                href="#"
+                target="_blank"
+                style="color: #0056b3; text-decoration: underline"
                 >Python Documentation: Control Flow</a
               >
             </li>
@@ -384,6 +406,7 @@
             style="
               display: inline-block;
               background-color: #d35400;
+              color: #white;
               color: white;
               padding: 10px 20px;
               text-decoration: none;
