--- a/days/day-001-printing.html
+++ b/days/day-001-printing.html
@@ -124,7 +124,7 @@
             Day 1 Tutorial
           </a>
           <a
-            href="https://replit.com/@jiansuphd/day-1100-days"
+            href="https://replit.com/learn/100-days-of-python/hub"
             target="_blank"
             rel="noopener noreferrer"
             style="
