Update Replit link for Day 2 tutorial

--- a/days/day-002-data-types.html
+++ b/days/day-002-data-types.html
@@ -110,7 +110,7 @@
             Day 2 Tutorial
           </a>
           <a
-            href="https://replit.com/@jiansuphd/day2100-days"
+            href="https://replit.com/learn/100-days-of-python/hub"
             target="_blank"
             rel="noopener noreferrer"
             style="
