Update links and styles in Day 3 HTML

--- a/days/day-003-control-flow.html
+++ b/days/day-003-control-flow.html
@@ -48,8 +48,25 @@
                 <a href="https://www.youtube.com/watch?v=G7r_1NQrSm0&t=1s" target="_blank" style="flex: 1; min-width: 250px; background-color: #c4302b; color: white; padding: 15px; border-radius: 6px; text-decoration: none; display: flex; align-items: center; justify-content: center; font-weight: bold;">
                     <span style="margin-right: 10px; font-size: 1.2rem;">▶</span> Watch Day 3 Tutorial
                 </a>
-                <a href="https://replit.com/@jiansuphd/day-3100-days" target="_blank" style="flex: 1; min-width: 250px; background-color: #0e1525; color: white; padding: 15px; border-radius: 6px; text-decoration: none; display: flex; align-items: center; justify-content: center; font-weight: bold;">
-                    <span style="margin-right: 10px; font-size: 1.2rem;">&lt;/&gt;</span> Open Day 3 Replit
+                <a
+            href="https://replit.com/learn/100-days-of-python/hub"
+            target="_blank"
+            rel="noopener noreferrer"
+            style="
+              flex: 1;
+              min-width: 250px;
+              background-color: #0e1525;
+              color: white;
+              padding: 15px;
+              border-radius: 6px;
+              text-decoration: none;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              font-weight: bold;
+            "
+          >
+            <span style="margin-right: 10px; font-size: 1.2rem">&lt;/&gt;</span> Open Day 3 Replit
                 </a>
             </div>
 
