Update link for Day 5 Replit tutorial

--- a/days/day-005-if-statements.html
+++ b/days/day-005-if-statements.html
@@ -119,24 +119,7 @@
             <span style="margin-right: 10px; font-size: 1.2rem">▶</span> Watch
             Day 5 Tutorial
           </a>
-          <a
-            href="https://replit.com/@jiansuphd/day5100-days"
-            target="_blank"
-            style="
-              flex: 1;
-              min-width: 250px;
-              background-color: #0e1525;
-              color: white;
-              padding: 15px;
-              border-radius: 6px;
-              text-decoration: none;
-              display: flex;
-              align-items: center;
-              justify-content: center;
-              font-weight: bold;
-            "
-          >
-            <span style="margin-right: 10px; font-size: 1.2rem">&lt;/&gt;</span>
+          <a href="https://replit.com/learn/100-days-of-python/hub" target="_blank" rel="noopener noreferrer" style=" flex: 1; min-width: 250px; background-color: #0e1525; color: white; padding: 15px; border-radius: 6px; text-decoration: none; display: flex; align-items: center; justify-content: center; font-weight: bold; " > <span style="margin-right: 10px; font-size: 1.2rem">&lt;/&gt;</span>
             Open Day 5 Replit
           </a>
         </div>
