Refactor HTML content and update link

--- a/days/day-006-elif.html
+++ b/days/day-006-elif.html
@@ -86,8 +86,8 @@
         >
           <h2 style="color: #2d3b45; margin-top: 0">What the elif is this?</h2>
           <p style="font-size: 1.1rem; margin-bottom: 15px">
-            The <code>elif</code> command (which stands for 'else if') allows
-            you to ask 2, 3, 4, or 142 questions using the same input!
+            The <code>elif</code> command (which stands for 'else if') allows you
+            to ask 2, 3, 4, or 142 questions using the same input!
           </p>
           <p>
             You can have as many <code>elif</code> statements as you want, but
@@ -121,25 +121,7 @@
             <span style="margin-right: 10px; font-size: 1.2rem">▶</span> Watch
             Day 6 Tutorial
           </a>
-          <a
-            href="https://replit.com/@jiansuphd/day6100-days"
-            target="_blank"
-            rel="noopener noreferrer"
-            style="
-              flex: 1;
-              min-width: 250px;
-              background-color: #0e1525;
-              color: white;
-              padding: 15px;
-              border-radius: 6px;
-              text-decoration: none;
-              display: flex;
-              align-items: center;
-              justify-content: center;
-              font-weight: bold;
-            "
-          >
-            <span style="margin-right: 10px; font-size: 1.2rem">&lt;/&gt;</span>
+          <a href="https://replit.com/learn/100-days-of-python/hub" target="_blank" rel="noopener noreferrer" style=" flex: 1; min-width: 250px; background-color: #0e1525; color: white; padding: 15px; border-radius: 6px; text-decoration: none; display: flex; align-items: center; justify-content: center; font-weight: bold; " > <span style="margin-right: 10px; font-size: 1.2rem">&lt;/&gt;</span>
             Open Day 6 Replit
           </a>
         </div>
