Refactor nesting explanation and update links

--- a/days/day-007-nesting.html
+++ b/days/day-007-nesting.html
@@ -86,9 +86,9 @@
         >
           <h2 style="color: #2d3b45; margin-top: 0">The Nesting Doll</h2>
           <p style="font-size: 1.1rem; margin-bottom: 15px">
-            <strong>Nesting</strong> is where we put an
-            <code>if</code> statement <em>within</em> another
-            <code>if</code> statement using the power of indenting.
+            <strong>Nesting</strong> is where we put an <code>if</code> statement
+            <em>within</em> another <code>if</code> statement using the power of
+            indenting.
           </p>
           <p>
             Think of it like a decision tree: "If I am hungry (Yes)... then: Do
@@ -122,25 +122,7 @@
             <span style="margin-right: 10px; font-size: 1.2rem">▶</span> Watch
             Day 7 Tutorial
           </a>
-          <a
-            href="https://replit.com/@jiansuphd/day-7100-days"
-            target="_blank"
-            rel="noopener noreferrer"
-            style="
-              flex: 1;
-              min-width: 250px;
-              background-color: #0e1525;
-              color: white;
-              padding: 15px;
-              border-radius: 6px;
-              text-decoration: none;
-              display: flex;
-              align-items: center;
-              justify-content: center;
-              font-weight: bold;
-            "
-          >
-            <span style="margin-right: 10px; font-size: 1.2rem">&lt;/&gt;</span>
+          <a href="https://replit.com/learn/100-days-of-python/hub" target="_blank" rel="noopener noreferrer" style=" flex: 1; min-width: 250px; background-color: #0e1525; color: white; padding: 15px; border-radius: 6px; text-decoration: none; display: flex; align-items: center; justify-content: center; font-weight: bold; " > <span style="margin-right: 10px; font-size: 1.2rem">&lt;/&gt;</span>
             Open Day 7 Replit
           </a>
         </div>
@@ -243,8 +225,7 @@
               >(<span style="color: #ce9178">"Right answer"</span>)<br />
               &nbsp;&nbsp;<span style="color: #c586c0">else</span>:<br />
               &nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #dcdcaa">print</span
-              >(<span style="color: #ce9178"
-                >"Nah, Daddy Pig's the greatest"</span
+              >(<span style="color: #ce9178">"Nah, Daddy Pig's the greatest"</span
               >)<br />
               <span style="color: #c586c0">elif</span>
               <span style="color: #9cdcfe">tv_show</span> ==
@@ -273,8 +254,8 @@
                 </li>
                 <li style="margin-bottom: 10px">
                   <strong>The Indent:</strong> Notice how the
-                  <code>input</code> for <code>fave_character</code> is
-                  indented? It lives inside the first <code>if</code>.
+                  <code>input</code> for <code>fave_character</code> is indented?
+                  It lives inside the first <code>if</code>.
                 </li>
               </ul>
             </div>
