--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
             </li>
             <li style="margin-bottom: 10px">
               <a
-                href="#"
+                href="https://docs.python.org/3/tutorial/controlflow.html"
                 target="_blank"
                 style="color: #0056b3; text-decoration: underline"
                 >Python Documentation: Control Flow</a
@@ -401,7 +401,7 @@
             linked below.
           </p>
           <a
-            href="#"
+            href="https://utk.instructure.com/courses"
             target="_blank"
             style="
               display: inline-block;
